# algebraics-viz

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  example.py  go.mod  go.sum  main.py  pyproject.toml  settings.toml
.github/workflows/: ci.yaml  tests.yaml
algebraics/graphics/: circle.py  models.py  rendering.py
algebraics/polynomial/: models.py  partition.py  polynomial.py
algebraics/ui/: circle.py  gl_widget.py  main_widget.py  models.py
cmd/algebraics/: algebraics  main.go
tests/: test_find_roots.py
